# daniel-sudoku

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: continuous_integration.yml  todo_to_issue.yml
docs/source/: conf.py  index.rst
scripts/: release.sh
source/daniel_sudoku/: main.py
source/daniel_sudoku/config/: constants.py  paths.py
source/daniel_sudoku/interface/: command_line.py
source/daniel_sudoku/logs/: setup_logging.py
source/daniel_sudoku/sudoku/: sudoku_engine.py
tests/: test_main.py
