[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "daniel_sudoku"
version = "0.1.0"
description = "A sudoku game."
authors = ["D. Morris <danielmorris6904@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "daniel_sudoku", from = "source"}]
homepage = "https://github.com/Daniel0469/daniel_sudoku"
repository = "https://github.com/Daniel0469/daniel_sudoku"
include = ["LICENSE", "source/daniel_sudoku/py.typed", "source/daniel_sudoku/VERSION"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich = "^12.0.0"

[tool.poetry.scripts]
daniel_sudoku = "daniel_sudoku.main:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
tox = "^3.27.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.20.0"
mypy = "^0.970"

[tool.poetry.group.devlint.dependencies]
isort = "^5.13.0"
black = "^22.6.0"
mypy = "^0.970"
Flake8-pyproject = "^1.1.0.post0"
flake8 = "^5.0.0"
pydocstyle = "^6.1.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.group.types.dependencies]
types-PyYAML = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.3.0"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
gitchangelog = "^3.0.0"
poetry-bumpversion = "^0.3.0"

[tool.poetry.group.dev.dependencies]
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}

[tool.poetry.extras]
test = ["pytest", "tox"]
lint = ["pre-commit", "mypy"]
devlint = ["isort", "black", "mypy", "Flake8-pyproject", "flake8", "pydocstyle", "flake8-docstrings"]
types = ["types-PyYAML"]
docs = ["sphinx"]
release = ["gitchangelog", "poetry-bumpversion"]
dev = ["tox-poetry-installer"]

[tool.poetry_bumpversion.file."source/blankslate/VERSION"]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 100
exclude = '''
/(
    .*        # Excludes all files starting from the root
    | docs    # Excludes the 'docs' directory
)/
'''

[tool.pydocstyle]
match = '(?!test)(?!setup)[^\._].*\.py'
match-dir = '(?!tests)(?!build)(?!docs)[^\.].*'
inherit = false
convention = 'numpy'

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
pretty = true
exclude = '(?x)( ^setup\.py$ | ^__pycache__ | ^build )'

[tool.flake8]
max-line-length = 100
exclude = ['.*', 'docs/', '**/__pycache__', 'setup.py', "**/__init__.py"]
docstring-convention = "numpy"
ignore = ['W503', 'D301', 'D401']